--- a/MgJava2014/Views/Shared/_Layout.cshtml
+++ b/MgJava2014/Views/Shared/_Layout.cshtml
@@ -1,16 +1,69 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Starter Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    @Styles.Render("~/Content/bootstrap.css", "~/Content/Site.css")
+
+    <!-- Add custom CSS here -->
+    <style>
+    body {
+        margin-top: 60px;
+    }
+    </style>
+
 </head>
+
 <body>
-    @RenderBody()
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Начало", "Index", "Home")
+                    </li>
+                    @if(User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Въпроси", "Index", "Question")
+                        </li>
+                    }
+                    @if (User.Identity.IsAuthenticated && User.Identity.Name == "LazarValkov")
+                    {
+                        <li>@Html.ActionLink("Добави Въпрос", "Add", "Question")</li>
+                    }
+                    @Html.Partial("AccountPartial")
+                </ul>
+            </div>
+
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <div class="container">
+
+        
+        @RenderBody()
+    </div>
+        
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
+
+    <!-- /.container -->
+
+    <!-- JavaScript -->
+    @Scripts.Render("~/Scripts/bootstrap.js", "~/Scripts/jquery-1.10.2.js")
+
 </body>
+
 </html>
